# rtrac

./: .gitignore  CMakeLists.txt  README.md  funcs.hpp  hello.cpp  hello3.cpp  integrate.cpp  integrate.hpp  inter.py  linalg.hpp  main.cpp  time.hpp
gui/: main_window.cpp  main_window.h  main_window.ui
math/: operations_ext.h  plane.cpp  plane.h  types.h
